--- a/styles.css
+++ b/styles.css
@@ -58,17 +58,11 @@ nav ul li {
     margin-right: 20px;
 }
 
+/*estilos para los titulos de la barra de navegacion*/
 nav a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.804);
+    color: rgb(255, 255, 255);
     font-weight: bold;
-}
-
-/* Estilo para las secciones */
-section {
-    background-color: #e8dccf27;
-    margin-bottom: 20px;
-    border-radius: 10px;
 }
 
 /* Estilo para el pie de página */
@@ -119,7 +113,6 @@ img#logo-footer {
     position: relative;
     height: 50vh;
     overflow: hidden;
-    z-index: -1; /* Asegura que el carrusel esté detrás del contenido */
 }
 
 /* Estilo para las imágenes del carrusel */
@@ -153,17 +146,23 @@ img#logo-footer {
     }
 }
 
-/* Estilos para el título de la sección de inicio */
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/* Estilos para la sección de inicio */
+#inicio {
+    text-align: center;
+    margin: 20px;
+}
+
 #inicio h3 {
     font-size: 3em;
-    color: #3498db;
+    color: #664625;
     margin-bottom: 15px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    text-align: center;
     cursor: pointer;
     position: relative;
-    z-index: 2; /* Ajustado para que esté sobre el carrusel */
+    padding-bottom: 8px; /* Espaciado inferior */
+    display: inline-block;
 }
 
 #inicio h3::after {
@@ -171,22 +170,40 @@ img#logo-footer {
     display: block;
     width: 50%;
     height: 2px;
-    background-color: #3498db;
+    background-color: #f3e2d1;
     position: absolute;
     bottom: 0;
     left: 25%;
     transform-origin: center;
     transform: scaleX(0);
     transition: transform 0.3s ease;
-    z-index: -1;
 }
 
 #inicio h3:hover::after {
     transform: scaleX(1);
 }
 
-/* Estilos para el párrafo de la sección de inicio */
-#inicio p {
+#inicio .intro-text {
+    font-size: 1.6em; /* Tamaño de fuente ligeramente aumentado */
+    color: #95a5a6;
+    max-width: 800px;
+    margin: 20px auto;
+    line-height: 1.8; /* Espaciado entre líneas aumentado para mejor legibilidad */
+    text-align: center;
+    position: relative;
+}
+
+#inicio .intro-text::before {
+    content: ''; 
+    display: block; 
+    width: 100%;
+    height: 1px; /* Línea horizontal para separar */
+    background-color: #f3e2d1;
+    margin: 10px 0; /* Espaciado superior e inferior */
+}
+
+
+#inicio .main-text {
     font-size: 1.4em;
     color: #95a5a6;
     max-width: 800px;
@@ -197,60 +214,53 @@ img#logo-footer {
     z-index: 2; /* Ajustado para que esté sobre el carrusel */
 }
 
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
-
-/*---------------------------------------------------------------------------------------------------------*/
-
-/*--------------------------------------------------------------------------------------------------*/
 /* Estilos para el contenedor de redes sociales */
 #redes-sociales-container {
-    text-align: center; /* Centramos el texto horizontalmente */
-    margin-top: 20px; /* Ajustamos el margen superior */
+    text-align: center;
+    margin-top: 20px;
 }
 
-/* Estilos para el texto "Síguenos en:" */
 #siguenos-texto {
     font-size: 1.5em;
-    color: #2c3e50; /* Cambia el color según tus preferencias */
+    color: #2c3e50;
     margin-bottom: 10px;
 }
 
 /* Estilos para los iconos de redes sociales */
 .social-icon {
     font-size: 2em;
-    margin: 0 15px; /* Añadimos espacio entre los iconos */
-    transition: color 0.3s ease; /* Añadimos transición de color para un efecto suave al pasar el ratón */
+    margin: 0 15px;
+    transition: color 0.3s ease;
 }
 
 .social-icon.facebook {
-    color: #1877f2; /* Color original de Facebook */
+    color: #1877f2;
 }
 
 .social-icon.instagram {
-    color: #c32aa3; /* Color original de Instagram */
+    color: #c32aa3;
 }
 
 .social-icon.tiktok {
-    color: #69c9d0; /* Color original de TikTok */
+    color: #69c9d0;
 }
 
 .social-icon:hover {
-    color: #e74c3c; /* Cambia el color al pasar el ratón para destacar */
+    color: #e74c3c;
 }
 
-/*-----------------------------------------------------------------------------*/
-/* Estilos mejorados para las amenidades en la sección de inicio */
+/* Estilos para las amenidades en la sección de inicio */
 #amenidades {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: #E5C9AE;
+    background-color: #b07a44;
     padding: 15px;
     border-radius: 15px;
     margin-top: 20px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .amenidad {
@@ -258,30 +268,30 @@ img#logo-footer {
     color: #D6AB7D;
     cursor: pointer;
     transition: color 0.3s ease;
-    flex: 1 1 45%; /* Ajuste para dispositivos móviles */
-    margin: 8px; /* Espaciado entre amenidades */
+    flex: 1 1 45%;
+    margin: 8px;
 }
 
 .amenidad i {
-    font-size: 24px; /* Tamaño reducido del ícono */
+    font-size: 24px;
     margin-bottom: 8px;
     transition: color 0.3s ease;
 }
 
 .amenidad p {
     margin-top: 5px;
-    font-size: 12px; /* Tamaño reducido del texto */
+    font-size: 12px;
 }
 
 /* Línea de división */
 .amenidad:not(:last-child) {
     border-right: 1px solid #D6AB7D;
-    margin-right: 8px; /* Espaciado entre amenidades */
+    margin-right: 8px;
 }
 
 /* Cambio de color al pasar el mouse */
 .amenidad:hover {
-    color: #fff; /* Color del texto al pasar el mouse */
+    color: #fff;
 }
 
 /* Cambio de color del ícono al pasar el mouse */
@@ -289,10 +299,31 @@ img#logo-footer {
     color: #fff;
 }
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/* Estilo para el contenedor específico del video de Facebook */
+#video-container {
+    position: relative;
+    width: 100%;
+    max-width: 800px; /* Ajusta el ancho máximo según tus necesidades */
+    margin: auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
 
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/*Estilos para el mapa*/
+.fb-video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* Proporción de aspecto 16:9 para videos */
+    height: 0;
+    overflow: hidden;
+}
+
+.fb-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 /*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /*Estilos para el carrusel de imagenes de fondo de la seccion reservar*/
